[package]
name = "gfx"
version = "0.1.0"
authors = ["crid3l <tcriddle@smu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.user32-sys]
version = "0.2.0"

[dependencies.winapi]
version = "0.3.7"
features = ["basetsd","d3d12","d3d12sdklayers","d3d12shader","d3dcommon","d3dcompiler","dxgi1_2","dxgi1_3","dxgi1_4","dxgi1_6","dxgidebug","dxgiformat","dxgitype","handleapi","minwindef","synchapi","unknwnbase","winbase","windef","winerror","winnt","winuser"]

[dependencies.d3d12]
version = "0.1.0"

[dependencies.winit]
version = "0.19.2"

[dependencies.spirv_cross]
version = "0.15.0"
features = ["hlsl"]

[dependencies.kernel32-sys]
version = "0.2.2"

[dependencies.widestring]
version = "0.4.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
